# onnx-converter

./: .gitignore  README.md  exploration.ipynb  pyproject.toml  test.py
converter/: __main__.py  colqwen2_model.py  convert_onnx_to_single_file.py  dummy_inputs.py  models.py
tests/: test_colpali.py  test_colqwen2.py
